--- a/web/themes/custom/girchi/templates/forms/form--user-register-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-register-form.html.twig
@@ -37,42 +37,42 @@
                         <div class="col-xs-12 col-md-7 col-lg-4 m-auto">
                             <form class="my-4">
                                 <div class="form-group">
-                                    <label class="form-label" for="email">{{ 'Email'|t }}</label>
+                                    <label class="form-label" for="email">{{ 'Email'|t }} <span class="text-danger">*</span></label>
 
                                     {{ element.account.mail }}
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label" for="password">{{ 'Password'|t }}</label>
+                                    <label class="form-label" for="password">{{ 'Password'|t }} <span class="text-danger">*</span></label>
 
                                     {{ element.account.pass.pass1 }}
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="password-confirmation"
-                                    >{{ 'Confirm password'|t }}</label
+                                    >{{ 'Confirm password'|t }} <span class="text-danger">*</span></label
                                     >
                                     {{ element.account.pass.pass2 }}
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="name"
-                                    >{{ 'Name'|t }}</label
+                                    >{{ 'Name'|t }} <span class="text-danger">*</span></label
                                     >
                                     {{ element.field_first_name }}
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="name"
-                                    >{{ 'Last name'|t }}</label
+                                    >{{ 'Last name'|t }} <span class="text-danger">*</span></label
                                     >
                                     {{ element.field_last_name }}
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="name"
-                                    >{{ 'Phone number'|t }}</label
+                                    >{{ 'Phone number'|t }} <span class="text-danger">*</span></label
                                     >
                                     {{ element.field_tel }}
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="name"
-                                    >{{ 'Personal ID'|t }}</label
+                                    >{{ 'Personal ID'|t }} <span class="text-danger">*</span></label
                                     >
                                     {{ element.field_personal_id }}
                                 </div>
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="form-group mb-2">
                                     <label class="form-label" for="last-name"
-                                    >{{ "Region" | t }}</label
+                                    >{{ "Region" | t }} <span class="text-danger">*</span></label
                                     >
                                     <select
                                         name="country"
