--- a/web/themes/custom/girchi/templates/pages/page--user.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--user.html.twig
@@ -1,3 +1,4 @@
+{% set supporterCount = user.supporters | length %}
 {% block page_head %}
     {% include '@girchi/header.htlm.twig' %}
 {% endblock %}
@@ -70,7 +71,7 @@
                     </span>
                 </div>
 
-                <div class="pt-3 pt-lg-0 mt-3 mt-lg-0 border-top border-top-lg-0 ml-lg-auto d-flex align-items-center justify-content-center justify-content-lg-start w-100 w-lg-auto">
+                <div class="pt-3 pt-lg-0 mt-3 mt-lg-0 border-top border-top-lg-0 ml-lg-auto d-flex align-items-center justify-content-center justify-content-lg-start w-100 w-lg-auto {{ user.is_politician ? 'flex-column' : '' }}">
                     <label class="m-0 mr-2 font-size-2 text-uppercase text-grey line-height-1-8">{{ 'Referrals' | t }}</label>
 
                     <ul class="list-unstyled m-0 align-items-center d-flex">
@@ -92,6 +93,34 @@
                             </li>
                         {% endif %}
                     </ul>
+                    {% if user.is_politician %}
+                        <label class="m-0 mr-2 font-size-2 text-uppercase text-grey line-height-1-8">{{ 'Supporters' | t }}</label>
+
+                        <ul class="list-unstyled m-0 align-items-center d-flex">
+                           {% if supporterCount > 5 %}
+                               {% for i in 0..4 %}
+                                    <li class="d-none d-md-inline-flex align-items-center mr-n2">
+                                        <a href="{{ path('user.page') }}" class="rounded-circle overflow-hidden d-inline-block border-solid border-2 border-white"  data-target="#referralModal" data-toggle="modal" >
+                                            <img src="{{ user.supporters[i]['img_url'] }}" class="rounded" width="34" alt="..."/>
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                                <li class="d-inline-flex align-items-center">
+                                    <a class="btn btn-light btn-sm m-1 px-2 ml-2 bg-hover-success text-hover-white" data-target="#supporters" data-toggle="modal" href="#">
+                                        {{ '+' ~ (supporterCount - 5)  }}
+                                    </a>
+                                </li>
+                           {% else %}
+                               {% for supporter in user.supporters %}
+                                   <li class="d-none d-md-inline-flex align-items-center mr-n2">
+                                       <a href="{{ path('user.page') }}" class="rounded-circle overflow-hidden d-inline-block border-solid border-2 border-white"  data-target="#supporters" data-toggle="modal" >
+                                           <img src="{{ supporter['img_url'] }}" class="rounded" width="34" alt="..."/>
+                                       </a>
+                                   </li>
+                               {% endfor %}
+                           {% endif %}
+                        </ul>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -268,6 +297,237 @@
     </div>
 </div>
 {#ENDMODAL#}
+<div
+    class="modal fade"
+    id="supporters"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="supportersTitle"
+    aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content overflow-hidden">
+            <div class="modal-header align-items-center px-3 px-md-4">
+                <h5
+                    class="modal-title font-size-3 text-uppercase font-weight-bold"
+                    id="supportersTitle"
+                >
+                    {{ 'Supporters' |t }}
+                </h5>
+                <form
+                    class="w-100 max-w-md-200 pt-3  mt-2 mt-md-0 pt-md-0 navbar-search ml-auto text-right mr-1 d-none d-md-block"
+                    action=""
+                >
+                    <div
+                        class="navbar-search-input bg-white rounded-oval pr-4 border-secondary border overflow-hidden w-100 w-md-200-px d-block"
+                    >
+                        <input
+                            type="text"
+                            name="q"
+                            id="supporter-search"
+                            placeholder="{{ 'Search...' |t }}"
+                            class="border-0 py-1 m-1 px-3 outline-none font-size-3 text-success w-100"
+                        />
+                    </div>
+                    <button
+                        class="navbar-search-btn border-0 p-0 outline-none bg-transparent line-height-0-9 m-2 p-1 text-dark-silver"
+                    >
+                        <i class="icon-search"></i>
+                    </button>
+                </form>
+                <button
+                    type="button"
+                    class="close ml-2"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                >
+                    <i
+                        aria-hidden="true"
+                        class="icon-close font-size-3 text-dark-silver"
+                    ></i>
+                </button>
+            </div>
+            <div class="modal-body p-0">
+                <table class="table m-0 table-hover">
+                    <thead>
+                    <tr class="bg-dark-white">
+                        <th
+                            scope="col"
+                            class="align-middle w-auto w-md-80-px text-center text-dark-silver font-size-2 border-0"
+                        >
+                            #
+                        </th>
+                        <th
+                            scope="col"
+                            class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0"
+                        >
+                            {{ "Name" |t }}
+                        </th>
+                        <th
+                            scope="col"
+                            class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0 text-center line-height-1-2"
+                        >
+                            {{ "Ged &#37;" |t  }}
+                            <span class="d-inline-block d-md-none">GeD</span>
+                        </th>
+                        <th
+                            scope="col"
+                            class="font-size-1 font-size-md-2 text-dark-silver align-middle text-center d-none d-md-table-cell border-0"
+                        >
+                            GeD
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for supporter in user.supporters %}
+                        <tr data-uid="{{ supporter.id }}">
+                            <th
+                                scope="row"
+                                class="pl-3 w-auto w-md-80-px text-center align-middle"
+                            >
+                    <span
+                        class="font-size-4 font-size-xl-5 text-dark-silver font-weight-normal"
+                    >{{ loop.index  }}</span
+                    >
+                            </th>
+                            <td class="align-middle">
+                                <div class="d-flex w-100 align-items-center">
+                                    <a
+                                        href="{{ path('entity.user.canonical', {'user' : supporter.id}) }}"
+                                        class="rounded-circle overflow  -hidden d-none d-md-block"
+                                    >
+                                        <img
+                                            src="{{ supporter.img_url }}"
+                                            class="rounded w-40-px"
+                                            alt="..."
+                                        />
+                                    </a>
+                                    <h6
+                                        class="w-100 w-sm-auto text-uppercase line-height-1-2 font-size-3 font-size-md-3 font-size-xl-base mb-0 mx-0 mx-md-3"
+                                    >
+                                        <a class="d-inline-block text-hover-success" href="{{ path('entity.user.canonical', {'user' : supporter.id}) }}">
+                          <span class="text-decoration-none d-inline-block">
+                            <span class="font-weight-bold">{{ supporter.name }}</span>
+                          </span>
+                                        </a>
+                                    </h6>
+                                </div>
+                            </td>
+                            <td
+                                class="text-right text-md-center align-middle font-weight-bold"
+                            >
+                    <span
+                        class="text-success font-size-4 font-weight-bold d-block d-md-none text-nowrap line-height-0-8"
+                    ><i class="icon-ged font-size-3"></i
+                        >{{ supporter.ged_amount|ged_long_format }}</span>
+                                {{ supporter.percentage }}%
+                            </td>
+                            <td class="align-middle text-center d-none d-md-table-cell">
+                    <span
+                        class="text-success font-size-4 font-size-xl-4 font-weight-bold text-nowrap"
+                    ><i class="icon-ged font-size-3"></i
+                        >{{ supporter.ged_amount|ged_long_format }}</span>
+                            </td>
+                        </tr>
+                    {% endfor %}
+
+
+
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div
+    class="modal fade"
+    id="supporters"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="supportersTitle"
+    aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content overflow-hidden">
+            <div class="modal-header align-items-center px-3 px-md-4">
+                <h5
+                    class="modal-title font-size-3 text-uppercase font-weight-bold"
+                    id="supportersTitle"
+                >
+                    {{ 'Supporters' |t }}
+                </h5>
+                <form
+                    class="w-100 max-w-md-200 pt-3  mt-2 mt-md-0 pt-md-0 navbar-search ml-auto text-right mr-1 d-none d-md-block"
+                    action=""
+                >
+                    <div
+                        class="navbar-search-input bg-white rounded-oval pr-4 border-secondary border overflow-hidden w-100 w-md-200-px d-block"
+                    >
+                        <input
+                            type="text"
+                            name="q"
+                            id="supporter-search"
+                            placeholder="{{ 'Search...' |t }}"
+                            class="border-0 py-1 m-1 px-3 outline-none font-size-3 text-success w-100"
+                        />
+                    </div>
+                    <button
+                        class="navbar-search-btn border-0 p-0 outline-none bg-transparent line-height-0-9 m-2 p-1 text-dark-silver"
+                    >
+                        <i class="icon-search"></i>
+                    </button>
+                </form>
+                <button
+                    type="button"
+                    class="close ml-2"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                >
+                    <i
+                        aria-hidden="true"
+                        class="icon-close font-size-3 text-dark-silver"
+                    ></i>
+                </button>
+            </div>
+            <div class="modal-body p-0">
+                <table class="table m-0 table-hover">
+                    <thead>
+                    <tr class="bg-dark-white">
+                        <th
+                            scope="col"
+                            class="align-middle w-auto w-md-80-px text-center text-dark-silver font-size-2 border-0"
+                        >
+                            #
+                        </th>
+                        <th
+                            scope="col"
+                            class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0"
+                        >
+                            {{ "Name" |t }}
+                        </th>
+                        <th
+                            scope="col"
+                            class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0 text-center line-height-1-2"
+                        >
+                            {{ "Ged &#37;" |t  }}
+                            <span class="d-inline-block d-md-none">GeD</span>
+                        </th>
+                        <th
+                            scope="col"
+                            class="font-size-1 font-size-md-2 text-dark-silver align-middle text-center d-none d-md-table-cell border-0"
+                        >
+                            GeD
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 {% block page_foot %}
