Temporarly remove partner block from front page.

--- a/web/modules/custom/girchi_utils/templates/top-topics.html.twig
+++ b/web/modules/custom/girchi_utils/templates/top-topics.html.twig
@@ -70,7 +70,7 @@
             </div>
 
             <div class="col-sm-12 col-md-7 col-lg-12">
-                {{  print_block('leadpartner') }}
+{#                {{  print_block('leadpartner') }}#}
             </div>
         </div>
     </div>
