--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -1,3 +1,4 @@
+{{ drupal_block('girchi_supporters_register_form_register_supporters_link') }}
 {# Start of GeD Progress #}
 <div class="progress ged-progress d-none d-lg-flex">
     <div
