Add rs link to elections-2020 page. refs #706

--- a/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
@@ -1,3 +1,4 @@
+{{ drupal_block('girchi_supporters_register_form_register_supporters_link') }}
 <div class="election-sticky-navbar">
     <!-- Start of header -->
     <header class="bg-gradient-green">
