Turn off 'I want to be a politician' checkbox.

--- a/web/modules/custom/girchi_my_party_list/templates/girchi-my-party-list.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/girchi-my-party-list.html.twig
@@ -148,14 +148,14 @@
                     </div>
                 </li>
             </ul>
-{#            <div class="text-center">#}
-{#                <button#}
-{#                        type="submit"#}
-{#                        class="btn btn-lg btn-success text-uppercase min-w-200"#}
-{#                >#}
-{#                    {{ 'Save' | t }}#}
-{#                </button>#}
-{#            </div>#}
+            <div class="text-center">
+                <button
+                        type="submit"
+                        class="btn btn-lg btn-success text-uppercase min-w-200"
+                >
+                    {{ 'Save' | t }}
+                </button>
+            </div>
         </form>
     </div>
 </div>
